# tp-algo-semestre-3

./: .gitignore  CMakeLists.txt
application/: CMakeLists.txt
application/src/: generate.c  generate.h  main.c
application/src/common/: assets.c  assets.h
application/src/game/: game_config.c  game_config.h  game_editor.c  game_editor.h  game_graphics.c  game_graphics.h  game_loader.c  game_loader.h  game_settings.c  game_settings.h  input.c  input.h  scene.c  scene.h
application/src/game/audio/: audio_manager.c  audio_manager.h
application/src/game/core/: game_core.c  game_core.h
application/src/game/ui/: editor_ui_manager.c  editor_ui_manager.h  game_settings_page.c  game_title_page.c  game_title_page.h  game_ui_manager.c  game_ui_manager.h
application/src/resolution/: gridinfo.c  gridinfo.h  hahsmap.c  hashmap.h  resoudre.c  resoudre.h
assets_dev/atlas/: candy_desc.json  electrician_desc.json  explosion_4_desc.json  low_quality_cat.json  low_quality_cat_desc.json  mastermind_desc.json  minus_five_desc.json  numbers.json  oupi_goupi_desc.json  ui_select_box_desc.json
enc_temp_folder/7f57b321e8ed406821f5a839dd7d150/: game_core.c
engine/src/: game_engine_common.c
engine/src/utils/: utils.h
levels/: level0.txt  level1.txt
